Add app scaffold in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,13 @@
   <title>Timer!</title>
 </head>
 <body>
-  
+  <div class="container">
+    <nav class="controls">
+      <a href="#!" class="button" id="start">Start</a>
+      <a href="#!" class="button" id="stop">Start</a>
+    </nav>
+    <div class="timer"></div>
+    <ul class="results"></ul>
+  </div>
 </body>
 </html>
