Add add Timer class. Implement method start, reset, render, calcTime

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
   <div class="container">
     <nav class="controls">
       <a href="#!" class="button" id="start">Start</a>
-      <a href="#!" class="button" id="stop">Start</a>
+      <a href="#!" class="button" id="stop">Stop</a>
+      <a href="#!" class="button" id="reset">Reset</a>
     </nav>
-    <div class="timer"></div>
+    <div id="timer" class="timer"></div>
     <ul class="results"></ul>
   </div>
 </body>
