Refactor Timer class. Add lap method

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,16 @@
 <body>
   <div class="container">
     <nav class="controls">
-      <a href="#!" class="button" id="start">Start</a>
-      <a href="#!" class="button" id="stop">Stop</a>
-      <a href="#!" class="button" id="reset">Reset</a>
+      <a href="#!" class="button start" id="start">Start</a>
+      <a href="#!" class="button lap" id="lap">Lap</a>
+      <a href="#!" class="button stop" id="stop">Stop</a>
     </nav>
     <div id="timer" class="timer"></div>
-    <ul class="results"></ul>
+    <div class="results">
+      <a href="#!" class="button clear" id="clear">Clear results</a>
+      <ul id="results"></ul>
+    </div>
+    
   </div>
 </body>
 </html>
