--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,14 @@
 <body>
   <div class="container">
     <nav class="controls">
-      <a href="#!" class="button start" id="start">Start</a>
-      <a href="#!" class="button lap" id="lap">Lap</a>
-      <a href="#!" class="button stop" id="stop">Stop</a>
+      <button class="button start" id="start">Start</button>
+      <button class="button lap" id="lap">Lap</button>
+      <button class="button stop" id="stop" disabled>Stop</button>
     </nav>
     <div id="timer" class="timer"></div>
-    <div class="results">
-      <a href="#!" class="button clear" id="clear">Clear results</a>
-      <ul id="results"></ul>
+    <div class="results-box">
+      <button class="button clear" id="clear">Clear results</button>
+      <ul id="results" class="results"></ul>
     </div>
     
   </div>
