--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <nav class="controls">
       <button class="button start" id="start">Start</button>
       <button class="button lap" id="lap">Lap</button>
-      <button class="button stop" id="stop" disabled>Stop</button>
+      <button class="button stop" id="stop">Stop</button>
     </nav>
     <div id="timer" class="timer"></div>
     <div class="results-box">
